testsuite/tests/partial-sigs/should_fail/WildcardInDefault.hs
{-# LANGUAGE PartialTypeSignatures #-}
module WildcardInDefault where

default (_)
