testsuite/tests/partial-sigs/should_fail/WildcardInDefault.stderr

WildcardInDefault.hs:4:10: error:
    Wildcard ‘_’ not allowed
      in a `default' declaration
